--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@
 .dark-theme {
     --primary-color: #000106;
     --secondary-color: #fff;
-    --nav-color: #000106;
+    --nav-color: #0f0f0ffa;
 }
 
 body {
@@ -121,7 +121,7 @@ span {
 }
 
 .contact {
-    margin-top: 150px;
+    margin-top: 140px;
     background-color: #24A8DF;
     box-shadow: 0 0 20px rgb(84, 84, 84);
     display: flex;
@@ -129,8 +129,10 @@ span {
     align-items: center;
     flex-direction: column;
     width: 700px;
-    padding: 100px;
+    padding: 90px;
     border-radius: 20px;
+    font-size: 20px;
+    transition: all 0.50s ease;
 }
 
 .container {
@@ -142,6 +144,7 @@ span {
 
 .container img {
     margin-bottom: 20px;
+    width: 80px;
 }
 
 .social-links {
@@ -155,10 +158,12 @@ span {
     color: var(--secondary-color);
     margin-right: 20px;
     border-radius: 50%;
+    transition: all 0.50s ease;
 }
 
 .social-links a:hover {
-    color: blanchedalmond;
+    color: rgb(82, 82, 82);
+    transform: translateY(5px);
 }
 
 #icon {
@@ -175,7 +180,7 @@ span {
     display: none;
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 1000px) {
     header {
         padding: 14px 2%;
         transition: .2s;
@@ -191,9 +196,17 @@ span {
         margin-top: 26%;
         text-align: center;
     }
+
+    .container img {
+        width: 60px;
+    }
+
+    .contact {
+        font-size: 15px;
+    }
 }
 
-@media (max-width: 1090px) {
+@media (max-width: 768px) {
     #menu-icon {
         display: block;
     }
@@ -222,7 +235,6 @@ span {
     .navbar a:hover {
         color: var(--text-color);
         transform: translateY(5px);
-
     }
 
     .navbar a:active {
@@ -234,7 +246,7 @@ span {
     }
 
     .info.shift-down1 {
-        margin-top: 50%;
+        margin-top: 57%;
         transition: all 0.5s ease;
     }
 
@@ -244,100 +256,22 @@ span {
         transition: all .50s ease;
     }
 
-    .contact{
+    .info h1 {
+        font-size: 30px;
+    }
+
+    .container img {
+        width: 50px;
+    }
+
+    .contact {
         margin-top: 150px;
         padding: 50px;
         width: 350px;
+        font-size: 10px;
     }
-}
 
-/*.search {
-    padding: 10px;
-}
-
-.search input {
-    transform: translate (-50%, -50%);
-    color: var(--secondary-color);
-    font-size: 16px;
-    background: transparent;
-    width: 12px;
-    height: 12px;
-    padding: 10px;
-    border: solid 3px #24A8DF;
-    outline: none;
-    border-radius: 35px;
-    transition: all 0.5s;
-    box-shadow: 0 6px 20px 8 #24a8df;
-}
-
-.search input::placeholder {
-    color: var(--secondary-color);
-    opacity: 0;
-    transition: opacity 150ms ease-out;
-}
-
-.search input:focus::placeholder {
-    opacity: 1;
-}
-
-.search input:focus,
-.search input:not(:placeholder-shown) {
-    width: 200px;
-}
-
-.social-links ul {
-    position: relative;
-    display: flex;
-}
-
-.social-links ul li {
-    position: relative;
-    list-style: none;
-    cursor: pointer;
-}
-
-.social-links ul li a {
-    text-decoration: none;
-}
-
-.social-links ul li a .fa-brands {
-    font-size: 30px;
-    color: #222;
-}
-
-.social-links ul li a::before {
-    font-family: "FontAwesome";
-    position: absolute;
-    font-size: 30px;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    height: 0;
-    transition: 0.8s ease-in-out;
-}
-
-.social-links ul li:nth-child(1) a::before {
-    content: "\f16d";
-    background-image: linear-gradient(45deg,
-            #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%,
-            #bc1888 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    border-bottom: 4px solid #dc2743;
-}
-
-.social-links ul li:nth-child(2) a::before {
-    content: "\f232";
-    color: #25D366;
-    border-bottom: 4px solid #25D366;
-}
-
-.social-links ul li:nth-child(3) a::before {
-    content: "\f099";
-    color: #1DA1F2;
-    border-bottom: 4px solid #1DA1F2;
-}
-
-.social-links ul li:hover a::before {
-    height: 100%;
+    .contact.active{
+        margin-top: 300px;
+    }
 }
